--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
 		</div>
 		<svg id="border" class="border"></svg>
 	</div>
+	<script src="https://cdn.jsdelivr.net/gh/yudopr/GSAPLittleBox@c0a4bf665b700d9f21cdeacf2745b1df0f329a38/gsapDebug.js" type="text/javascript"></script>
 </body>
 </html>
