Generic vs Enabler. Add option to use generic exit & option to use separate exits on Enabler

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>300x250 Container</title>
 	<link rel="stylesheet" href="main.css">
 	<script type="text/javascript" src="designer.js"></script>
-	<script src="https://unfoldagency.net/dev/unfold/ads/script/gsap_3.9.1_min.js"></script>
+	<script src="https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.11.1_min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 
@@ -61,6 +61,5 @@
 		</div>
 		<svg id="border" class="border"></svg>
 	</div>
-	<script src="https://cdn.jsdelivr.net/gh/yudopr/GSAPLittleBox@c0a4bf665b700d9f21cdeacf2745b1df0f329a38/gsapDebug.js" type="text/javascript"></script>
 </body>
 </html>
